infra/k8s/minio/silo-console-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: silo-console-ingress
  namespace: minio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - silo-console.stage.codedang.com
      secretName: silo-console-tls
  rules:
    - host: silo-console.stage.codedang.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: silo-shadow
                port:
                  number: 9090
